--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
 	<CENTER><H1>The Voyager Spacecraft</H1></CENTER>
 	<CENTER><figure><IMG SRC="http://voyager.jpl.nasa.gov/spacecraft/images/spacecraft.jpg" alt="Picture of the Voyager. Credit NASA:http://voyager.jpl.nasa.gov/spacecraft/" ALIGN="BOTTOM"><figcaption style="font-size:10px;">Source: http://voyager.jpl.nasa.gov/spacecraft/</figcaption></CENTER>
 	
-		 <A href="file:///C:/Users/Burns/OneDrive/Documents/Voyager%20Page%202.html"> After the Mission</A>			
+		 <A href="https://tab26715.github.io/Voyager Page 2"> After the Mission</A>			
 	<h3>The Program</h3>
 <P>-    The voyager program is an ongoing scientific mission that oversees the operation of two robotic probes, Voyager 1 and 2<br>
 	-	The probes were originally designated under the Mariner program as Mariner 11 and 12, however they were repurposed beginning in 1972 to explore Jupiter and Saturn, benefiting from a favorable alignment of the outer planets<br>
